plugins {
	id 'java'
	id 'maven-publish'
}

group = 'com.melluh'
version = '1.0.0'

sourceCompatibility = '1.8'
targetCompatibility = '1.8'

publishing {
	publications {
		maven(MavenPublication) {
			groupId = 'com.melluh'
			artifactId = 'simple-http-server'
			from components.java
		}
	}
}